[tool.poetry]
name = "bootloader"
version = "2.0.0"
description = "A tool for loading firmware onto Dephy devices."
authors = ["Jared <jcoughlin@dephy.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bootload = 'bootloader.main:main'


[tool.pylint.messages_control]
max-line-length = 88
disable = [
  "missing-docstring",
  "too-few-public-methods",
  "invalid-name",
  "too-many-instance-attributes",
]


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.nox
  | \.venv
  | build
  | dist
)/
'''
